Bug 415699 - kmenuedit crashes when creating a new item
Summary: kmenuedit crashes when creating a new item
Status: RESOLVED FIXED
Alias: None
Product: kmenuedit
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.17.90
Platform: Ubuntu Linux
: HI crash
Target Milestone: ---
Assignee: David Redondo
URL:
Keywords: drkonqi
: 416486 417097 417173 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-12-30 09:57 UTC by Oded Arbel
Modified: 2020-02-10 18:32 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.18.0
Sentry Crash Report:


Attachments
kmenuedit-20200115-131212.kcrash.txt (7.94 KB, text/plain)
2020-01-15 10:16 UTC, Victor Ryzhykh
Details
kmenuedit-20200118-120549.kcrash.txt (7.80 KB, text/plain)
2020-01-18 17:07 UTC, Eric Adams
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oded Arbel 2019-12-30 09:57:15 UTC
Application: kmenuedit (5.17.80)

Qt Version: 5.12.4
Frameworks Version: 5.66.0
Operating System: Linux 5.3.0-25-generic x86_64
Distribution: Ubuntu 19.10

-- Information about the crash:
- What I was doing when the application crashed:
Selected the "Internet" group, clicked "New Item", typed "Outline Manager" and clicked "OK".

Using KCI unstable, fully up to date, with kmenuedit package 4:5.17.4+p19.10+git20191228.0658-0

The crash can be reproduced every time.

-- Backtrace:
Application: KDE Menu Editor (kmenuedit), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fd6045d0100 (LWP 17648))]

Thread 4 (Thread 0x7fd5fb338700 (LWP 17651)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x55d106cad8c8) at ../sysdeps/unix/sysv/linux/futex-internal.h:80
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x55d106cad878, cond=0x55d106cad8a0) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x55d106cad8a0, mutex=0x55d106cad878) at pthread_cond_wait.c:638
#3  0x00007fd5fb81e97b in ?? () from /usr/lib/x86_64-linux-gnu/dri/i965_dri.so
#4  0x00007fd5fb81e59b in ?? () from /usr/lib/x86_64-linux-gnu/dri/i965_dri.so
#5  0x00007fd609524669 in start_thread (arg=<optimized out>) at pthread_create.c:479
#6  0x00007fd609666323 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 3 (Thread 0x7fd601c5a700 (LWP 17650)):
#0  0x00007fd609659c2f in __GI___poll (fds=0x7fd5f40029e0, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007fd606866a3e in g_main_context_poll (priority=<optimized out>, n_fds=1, fds=0x7fd5f40029e0, timeout=<optimized out>, context=0x7fd5f4000c30) at ../../../glib/gmain.c:4216
#2  g_main_context_iterate (context=context@entry=0x7fd5f4000c30, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../../../glib/gmain.c:3912
#3  0x00007fd606866b73 in g_main_context_iteration (context=0x7fd5f4000c30, may_block=may_block@entry=1) at ../../../glib/gmain.c:3978
#4  0x00007fd607d446c3 in QEventDispatcherGlib::processEvents (this=0x7fd5f4000b60, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#5  0x00007fd607ceb63b in QEventLoop::exec (this=this@entry=0x7fd601c59d70, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:140
#6  0x00007fd607b24a75 in QThread::exec (this=<optimized out>) at ../../include/QtCore/../../src/corelib/global/qflags.h:120
#7  0x00007fd608074efa in ?? () from /usr/lib/x86_64-linux-gnu/libQt5DBus.so.5
#8  0x00007fd607b25cc2 in QThreadPrivate::start (arg=0x7fd6080f7d80) at thread/qthread_unix.cpp:361
#9  0x00007fd609524669 in start_thread (arg=<optimized out>) at pthread_create.c:479
#10 0x00007fd609666323 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 2 (Thread 0x7fd603720700 (LWP 17649)):
#0  0x00007fd609659c2f in __GI___poll (fds=fds@entry=0x7fd60371fca8, nfds=nfds@entry=1, timeout=timeout@entry=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007fd60669f917 in poll (__timeout=-1, __nfds=1, __fds=0x7fd60371fca8) at /usr/include/x86_64-linux-gnu/bits/poll2.h:46
#2  _xcb_conn_wait (c=c@entry=0x55d106c5c3b0, cond=cond@entry=0x55d106c5c3f0, vector=vector@entry=0x0, count=count@entry=0x0) at ../../src/xcb_conn.c:479
#3  0x00007fd6066a153a in xcb_wait_for_event (c=0x55d106c5c3b0) at ../../src/xcb_in.c:697
#4  0x00007fd603f08288 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#5  0x00007fd607b25cc2 in QThreadPrivate::start (arg=0x55d106c4c230) at thread/qthread_unix.cpp:361
#6  0x00007fd609524669 in start_thread (arg=<optimized out>) at pthread_create.c:479
#7  0x00007fd609666323 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 1 (Thread 0x7fd6045d0100 (LWP 17648)):
[KCrash Handler]
#6  0x00007fd6091ece24 in KService::desktopEntryName() const () from /usr/lib/x86_64-linux-gnu/libKF5Service.so.5
#7  0x00007fd6097699c9 in GlobalAccel::getMenuEntryShortcut (storageId=...) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qchar.h:88
#8  0x00007fd609765905 in MenuEntryInfo::shortcut (this=this@entry=0x55d107440240) at ./menuinfo.cpp:367
#9  0x00007fd609752c0d in BasicTab::setEntryInfo (this=0x55d106e01e70, entryInfo=0x55d107440240) at ./basictab.cpp:345
#10 0x00007fd60976aba4 in BasicTab::qt_static_metacall (_o=<optimized out>, _id=<optimized out>, _a=<optimized out>, _c=<optimized out>) at ./obj-x86_64-linux-gnu/kdeinit_kmenuedit_autogen/EWIEGA46WW/moc_basictab.cpp:129
#11 0x00007fd607d18468 in QMetaObject::activate (sender=0x55d106d007d0, signalOffset=<optimized out>, local_signal_index=<optimized out>, argv=<optimized out>) at kernel/qobject.cpp:3801
#12 0x00007fd60976a9b6 in TreeView::entrySelected (this=<optimized out>, _t1=<optimized out>) at ./obj-x86_64-linux-gnu/kdeinit_kmenuedit_autogen/EWIEGA46WW/moc_treeview.cpp:249
#13 0x00007fd607d185c8 in QtPrivate::QSlotObjectBase::call (a=0x7fff3a8ed3c0, r=0x55d106d007d0, this=0x55d106e01be0) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:394
#14 QMetaObject::activate (sender=0x55d106d007d0, signalOffset=<optimized out>, local_signal_index=<optimized out>, argv=<optimized out>) at kernel/qobject.cpp:3781
#15 0x00007fd608b2f1b2 in QTreeWidget::currentItemChanged(QTreeWidgetItem*, QTreeWidgetItem*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#16 0x00007fd608b37d9f in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#17 0x00007fd607d18468 in QMetaObject::activate (sender=0x7fd5fc0053c0, signalOffset=<optimized out>, local_signal_index=<optimized out>, argv=<optimized out>) at kernel/qobject.cpp:3801
#18 0x00007fd607ca8157 in QItemSelectionModel::currentChanged (this=this@entry=0x7fd5fc0053c0, _t1=..., _t2=...) at .moc/moc_qitemselectionmodel.cpp:465
#19 0x00007fd607caa420 in QItemSelectionModel::setCurrentIndex (this=0x7fd5fc0053c0, index=..., command=...) at itemmodels/qitemselectionmodel.cpp:1414
#20 0x00007fd608ab0a2d in QAbstractItemView::setCurrentIndex(QModelIndex const&) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#21 0x00007fd608b310ae in QTreeWidget::setCurrentItem(QTreeWidgetItem*, int) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#22 0x00007fd60975e1f8 in TreeView::newitem (this=0x55d106d007d0) at ./treeview.cpp:1145
#23 0x00007fd607d185c8 in QtPrivate::QSlotObjectBase::call (a=0x7fff3a8ed800, r=0x55d106d007d0, this=0x55d106d31140) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:394
#24 QMetaObject::activate (sender=0x55d106cb8400, signalOffset=<optimized out>, local_signal_index=<optimized out>, argv=<optimized out>) at kernel/qobject.cpp:3781
#25 0x00007fd608843406 in QAction::triggered(bool) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#26 0x00007fd608845ac2 in QAction::activate(QAction::ActionEvent) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#27 0x00007fd60893f840 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#28 0x00007fd60893fa65 in QAbstractButton::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#29 0x00007fd608a329ae in QToolButton::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#30 0x00007fd60888c04e in QWidget::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#31 0x00007fd608a32a58 in QToolButton::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#32 0x00007fd608849a86 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#33 0x00007fd608853053 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#34 0x00007fd607ceca9a in QCoreApplication::notifyInternal2 (receiver=0x55d106e199c0, event=0x7fff3a8edda0) at ../../include/QtCore/../../src/corelib/kernel/qobject.h:142
#35 0x00007fd608852157 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#36 0x00007fd6088a814d in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#37 0x00007fd6088aafdc in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#38 0x00007fd608849a86 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#39 0x00007fd608852e00 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#40 0x00007fd607ceca9a in QCoreApplication::notifyInternal2 (receiver=0x55d107053250, event=0x7fff3a8ee220) at ../../include/QtCore/../../src/corelib/kernel/qobject.h:142
#41 0x00007fd60821fd73 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#42 0x00007fd6082215fb in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#43 0x00007fd6081fb26b in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#44 0x00007fd603f0928e in ?? () from /usr/lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#45 0x00007fd60686684d in g_main_dispatch (context=0x7fd5fc005010) at ../../../glib/gmain.c:3179
#46 g_main_context_dispatch (context=context@entry=0x7fd5fc005010) at ../../../glib/gmain.c:3844
#47 0x00007fd606866ad0 in g_main_context_iterate (context=context@entry=0x7fd5fc005010, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../../../glib/gmain.c:3917
#48 0x00007fd606866b73 in g_main_context_iteration (context=0x7fd5fc005010, may_block=may_block@entry=1) at ../../../glib/gmain.c:3978
#49 0x00007fd607d446a5 in QEventDispatcherGlib::processEvents (this=0x55d106cac200, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#50 0x00007fd607ceb63b in QEventLoop::exec (this=this@entry=0x7fff3a8ee5c0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:140
#51 0x00007fd607cf33a6 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:120
#52 0x00007fd60974f176 in kdemain (argc=<optimized out>, argv=<optimized out>) at ./main.cpp:93
#53 0x00007fd60956b1e3 in __libc_start_main (main=0x55d10685d060 <main>, argc=1, argv=0x7fff3a8ee7e8, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fff3a8ee7d8) at ../csu/libc-start.c:308
#54 0x000055d10685d09e in _start ()
[Inferior 1 (process 17648) detached]

Reported using DrKonqi
Comment 1 Victor Ryzhykh 2020-01-15 10:16:55 UTC
Created attachment 125141 [details]
kmenuedit-20200115-131212.kcrash.txt

Application: kmenuedit (5.17.80)

Qt Version: 5.14.0
Frameworks Version: 5.66.0
Operating System: Linux 5.4.12-nrj-desktop-1rosa-x86_64 x86_64
Windowing system: X11
Distribution: ROSA Desktop Fresh R11 EE 2016.1 Desktop

The crash can be reproduced every time.
Comment 2 Eric Adams 2020-01-18 15:11:58 UTC
I can confirm this behavior using the Kubuntu beta PPA on 19.10.

Operating System: Kubuntu 19.10
KDE Plasma Version: 5.17.90
KDE Frameworks Version: 5.66.0
Qt Version: 5.12.4
Kernel Version: 5.3.0-26-generic
OS Type: 64-bit
Processors: 12 × Intel® Core™ i7-8750H CPU @ 2.20GHz
Memory: 15.4 GiB of RAM
Comment 3 Eric Adams 2020-01-18 17:07:48 UTC
Created attachment 125227 [details]
kmenuedit-20200118-120549.kcrash.txt

Possibly no different than the other reporter but I thought it might be helpful.
Comment 4 Rik Mills 2020-01-19 09:10:58 UTC
Application: kmenuedit (5.17.90)
Qt Version: 5.12.5
Frameworks Version: 5.66.0
Distribution: Ubuntu 20.04

Thread 1 "kmenuedit" received signal SIGSEGV, Segmentation fault.
KService::desktopEntryName (this=0x0) at ./src/services/kservice.cpp:909
909     ./src/services/kservice.cpp: No such file or directory.
(gdb) bt
#0  KService::desktopEntryName (this=0x0) at ./src/services/kservice.cpp:909
#1  0x00007ffff7fa0b79 in GlobalAccel::getMenuEntryShortcut (storageId=...) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qchar.h:88
#2  0x00007ffff7f9cab5 in MenuEntryInfo::shortcut (this=this@entry=0x5555559928e0) at ./menuinfo.cpp:367
#3  0x00007ffff7f89e0d in BasicTab::setEntryInfo (this=0x555555684d00, entryInfo=0x5555559928e0) at ./basictab.cpp:345
#4  0x00007ffff7f84a24 in BasicTab::qt_static_metacall (_o=<optimised out>, _id=<optimised out>, _a=<optimised out>, _c=<optimised out>) at ./obj-x86_64-linux-gnu/kdeinit_kmenuedit_autogen/EWIEGA46WW/moc_basictab.cpp:129
#5  0x00007ffff65736e8 in QMetaObject::activate (sender=0x555555625a90, signalOffset=<optimised out>, local_signal_index=<optimised out>, argv=<optimised out>) at kernel/qobject.cpp:3803
#6  0x00007ffff7f84836 in TreeView::entrySelected (this=<optimised out>, _t1=<optimised out>) at ./obj-x86_64-linux-gnu/kdeinit_kmenuedit_autogen/EWIEGA46WW/moc_treeview.cpp:249
#7  0x00007ffff6573848 in QtPrivate::QSlotObjectBase::call (a=0x7fffffffcca0, r=0x555555625a90, this=0x555555669ed0) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:394
#8  QMetaObject::activate (sender=0x555555625a90, signalOffset=<optimised out>, local_signal_index=<optimised out>, argv=<optimised out>) at kernel/qobject.cpp:3783
#9  0x00007ffff738bbe2 in QTreeWidget::currentItemChanged (this=<optimised out>, _t1=<optimised out>, _t2=<optimised out>) at .moc/moc_qtreewidget.cpp:444
#10 0x00007ffff738d622 in QTreeWidgetPrivate::_q_emitCurrentItemChanged (this=<optimised out>, current=..., previous=...) at itemviews/qtreewidget.cpp:2342
#11 0x00007ffff73947cf in QTreeWidget::qt_static_metacall (_o=<optimised out>, _c=<optimised out>, _id=<optimised out>, _a=<optimised out>) at itemviews/qtreewidget.h:381
#12 0x00007ffff65736e8 in QMetaObject::activate (sender=0x7fffec005500, signalOffset=<optimised out>, local_signal_index=<optimised out>, argv=<optimised out>) at kernel/qobject.cpp:3803
#13 0x00007ffff65033d7 in QItemSelectionModel::currentChanged (this=this@entry=0x7fffec005500, _t1=..., _t2=...) at .moc/moc_qitemselectionmodel.cpp:465
#14 0x00007ffff65056a0 in QItemSelectionModel::setCurrentIndex (this=0x7fffec005500, index=..., command=...) at itemmodels/qitemselectionmodel.cpp:1414
#15 0x00007ffff730d45d in QAbstractItemView::setCurrentIndex (this=this@entry=0x555555625a90, index=...) at /usr/include/c++/9/bits/atomic_base.h:413
#16 0x00007ffff738dade in QTreeWidget::setCurrentItem (this=this@entry=0x555555625a90, item=0x555555953240, column=column@entry=0) at ../../include/QtCore/../../src/corelib/kernel/qobject.h:499
#17 0x00007ffff738db0b in QTreeWidget::setCurrentItem (this=this@entry=0x555555625a90, item=<optimised out>) at itemviews/qtreewidget.cpp:2840
#18 0x00007ffff7f953e8 in TreeView::newitem (this=0x555555625a90) at ./treeview.cpp:1145
#19 0x00007ffff6573848 in QtPrivate::QSlotObjectBase::call (a=0x7fffffffd0e0, r=0x555555625a90, this=0x55555566d300) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:394
#20 QMetaObject::activate (sender=0x555555637440, signalOffset=<optimised out>, local_signal_index=<optimised out>, argv=<optimised out>) at kernel/qobject.cpp:3783
#21 0x00007ffff709f3e6 in QAction::triggered (this=this@entry=0x555555637440, _t1=<optimised out>) at .moc/moc_qaction.cpp:380
#22 0x00007ffff70a1aa2 in QAction::activate (this=0x555555637440, event=<optimised out>) at kernel/qaction.cpp:1166
#23 0x00007ffff719bc30 in QAbstractButtonPrivate::click (this=0x55555582bfb0) at widgets/qabstractbutton.cpp:397
#24 0x00007ffff719be55 in QAbstractButton::mouseReleaseEvent (this=0x5555556dff60, e=0x7fffffffd680) at widgets/qabstractbutton.cpp:1011
#25 0x00007ffff728f3ce in QToolButton::mouseReleaseEvent (this=<optimised out>, e=<optimised out>) at widgets/qtoolbutton.cpp:622
#26 0x00007ffff70e82de in QWidget::event (this=0x5555556dff60, event=0x7fffffffd680) at kernel/qwidget.cpp:8965
#27 0x00007ffff719d093 in QAbstractButton::event (this=this@entry=0x5555556dff60, e=e@entry=0x7fffffffd680) at widgets/qabstractbutton.cpp:968
#28 0x00007ffff728f478 in QToolButton::event (this=0x5555556dff60, event=0x7fffffffd680) at widgets/qtoolbutton.cpp:1001
#29 0x00007ffff70a5a66 in QApplicationPrivate::notify_helper (this=this@entry=0x55555556ce80, receiver=receiver@entry=0x5555556dff60, e=e@entry=0x7fffffffd680) at kernel/qapplication.cpp:3700
#30 0x00007ffff70af333 in QApplication::notify (this=<optimised out>, receiver=0x5555556dff60, e=0x7fffffffd680) at kernel/qapplication.cpp:3160
#31 0x00007ffff6547d1a in QCoreApplication::notifyInternal2 (receiver=0x5555556dff60, event=0x7fffffffd680) at ../../include/QtCore/../../src/corelib/kernel/qobject.h:142
#32 0x00007ffff70ae447 in QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0x5555556dff60, event=event@entry=0x7fffffffd680, alienWidget=alienWidget@entry=0x5555556dff60, nativeWidget=0x5555555f76c0, 
    buttonDown=buttonDown@entry=0x7ffff75d58d0 <qt_button_down>, lastMouseReceiver=..., spontaneous=true, onlyDispatchEnterLeave=false) at kernel/qapplication.cpp:2646
#33 0x00007ffff71042bd in QWidgetWindow::handleMouseEvent (this=0x55555577af50, event=0x7fffffffdb00) at /usr/include/c++/9/bits/atomic_base.h:413
#34 0x00007ffff710714c in QWidgetWindow::event (event=0x7fffffffdb00, this=0x55555577af50) at kernel/qwidgetwindow.cpp:281
#35 QWidgetWindow::event (this=0x55555577af50, event=0x7fffffffdb00) at kernel/qwidgetwindow.cpp:224
#36 0x00007ffff70a5a66 in QApplicationPrivate::notify_helper (this=this@entry=0x55555556ce80, receiver=receiver@entry=0x55555577af50, e=e@entry=0x7fffffffdb00) at kernel/qapplication.cpp:3700
#37 0x00007ffff70af0e0 in QApplication::notify (this=0x7fffffffdf80, receiver=0x55555577af50, e=0x7fffffffdb00) at kernel/qapplication.cpp:3446
#38 0x00007ffff6547d1a in QCoreApplication::notifyInternal2 (receiver=0x55555577af50, event=0x7fffffffdb00) at ../../include/QtCore/../../src/corelib/kernel/qobject.h:142
#39 0x00007ffff6a786d3 in QGuiApplicationPrivate::processMouseEvent (e=e@entry=0x55555592ddd0) at kernel/qguiapplication.cpp:2107
#40 0x00007ffff6a79f4b in QGuiApplicationPrivate::processWindowSystemEvent (e=e@entry=0x55555592ddd0) at kernel/qguiapplication.cpp:1842
#41 0x00007ffff6a542ab in QWindowSystemInterface::sendWindowSystemEvents (flags=flags@entry=...) at kernel/qwindowsysteminterface.cpp:1151
#42 0x00007ffff292f25e in xcbSourceDispatch (source=<optimised out>) at qxcbeventdispatcher.cpp:105
#43 0x00007ffff5076edd in g_main_dispatch (context=0x7fffec005010) at ../../../glib/gmain.c:3272
#44 g_main_context_dispatch (context=context@entry=0x7fffec005010) at ../../../glib/gmain.c:3937
#45 0x00007ffff5077160 in g_main_context_iterate (context=context@entry=0x7fffec005010, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimised out>) at ../../../glib/gmain.c:4010
#46 0x00007ffff5077203 in g_main_context_iteration (context=0x7fffec005010, may_block=may_block@entry=1) at ../../../glib/gmain.c:4071
#47 0x00007ffff659f925 in QEventDispatcherGlib::processEvents (this=0x5555555e11d0, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#48 0x00007ffff65468bb in QEventLoop::exec (this=this@entry=0x7fffffffdea0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:140
#49 0x00007ffff654e626 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:120
#50 0x00007ffff6a6d8d0 in QGuiApplication::exec () at kernel/qguiapplication.cpp:1784
#51 0x00007ffff70a59d9 in QApplication::exec () at kernel/qapplication.cpp:2856
#52 0x00007ffff7f86376 in kdemain (argc=<optimised out>, argv=<optimised out>) at ./main.cpp:93
#53 0x00007ffff7da11e3 in __libc_start_main (main=0x555555555060 <main>, argc=1, argv=0x7fffffffe0c8, init=<optimised out>, fini=<optimised out>, rtld_fini=<optimised out>, stack_end=0x7fffffffe0b8) at ../csu/libc-start.c:308
#54 0x000055555555509e in _start ()
Comment 5 Rik Mills 2020-01-19 09:40:49 UTC
Also the same crash on:

Application: kmenuedit (5.17.90)
Qt Version: 5.13.2
Frameworks Version: 5.67.0 (git master)
Distribution: Neon Testing edition

DOES NOT CRASH on:

Application: kmenuedit (5.17.5)
Qt Version: 5.13.2
Frameworks Version: 5.66.0
Distribution: Neon User edition
Comment 6 David Redondo 2020-01-20 13:54:27 UTC
Git commit e6f5adb584547be63a48bd03610032eec2162455 by David Redondo.
Committed on 20/01/2020 at 13:54.
Pushed by davidre into branch 'master'.

Correctly save shortcuts of new Items

Summary:
When saving first all changes are saved before updating syscoca. This lead to a
crash because serviceByStorageId failed. We can just change the API to directly to
take KService::Ptr's.
FIXED-IN: 5.18.0

Test Plan: Correctly created a new item and set a shortcut for it

Reviewers: #plasma, rikmills, davidedmundson

Reviewed By: #plasma, davidedmundson

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D26765

M  +2    -4    globalaccel.cpp
M  +3    -3    globalaccel.h
M  +1    -1    kconf_update/globalaccel.cpp
M  +3    -3    menuinfo.cpp

https://commits.kde.org/kmenuedit/e6f5adb584547be63a48bd03610032eec2162455
Comment 7 David Redondo 2020-01-20 14:12:49 UTC
Git commit 92bbc4735cbc7277610e48c82f3e41ac37e5773f by David Redondo.
Committed on 20/01/2020 at 14:12.
Pushed by davidre into branch 'Plasma/5.18'.

Correctly save shortcuts of new Items

Summary:
When saving first all changes are saved before updating syscoca. This lead to a
crash because serviceByStorageId failed. We can just change the API to directly to
take KService::Ptr's.
FIXED-IN: 5.18.0

Test Plan: Correctly created a new item and set a shortcut for it

Reviewers: #plasma, rikmills, davidedmundson

Reviewed By: #plasma, davidedmundson

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D26765

M  +2    -4    globalaccel.cpp
M  +3    -3    globalaccel.h
M  +1    -1    kconf_update/globalaccel.cpp
M  +3    -3    menuinfo.cpp

https://commits.kde.org/kmenuedit/92bbc4735cbc7277610e48c82f3e41ac37e5773f
Comment 8 Nate Graham 2020-01-20 18:18:50 UTC
*** Bug 416486 has been marked as a duplicate of this bug. ***
Comment 9 Wolfgang Bauer 2020-02-05 07:20:27 UTC
*** Bug 417173 has been marked as a duplicate of this bug. ***
Comment 10 Wolfgang Bauer 2020-02-05 07:22:39 UTC
*** Bug 417097 has been marked as a duplicate of this bug. ***