Correctly save shortcuts of new Items

Summary:
When saving first all changes are saved before updating syscoca. This lead to a
crash because serviceByStorageId failed. We can just change the API to directly to
take KService::Ptr's.
BUG: 415699
FIXED-IN: 5.18.0

Test Plan: Correctly created a new item and set a shortcut for it

Reviewers: #plasma, rikmills, davidedmundson

Reviewed By: #plasma, davidedmundson

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D26765